Wed Nov 13 11:04:26 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: If running on an SCO system, define SCO, and force
	HAVE_ISINF and HAVE_ISNAN to be defined.
	Also check for ieeefp.h and nan.h.

Tue Nov 12 21:50:49 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* MAKEINFO.PATCH: Update to use patch relative to texinfo-3.9.

	* INFO.PATCH: New file.
	* octMakefile.in (DISTFILES): Add it.

	* info: Update to current release from texinfo-3.9.

Mon Nov 11 23:56:58 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* config.h.bot: Only check value of __GNUC__ and __GNUC_MINOR__ if
	__GNUC__ is defined.

Fri Nov  8 11:15:07 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makeconf.in (version): Look in $(TOPDIR)/src then
	$(srcdir)/$(TOPDIR)/src for version.h.

	* configure.in (TERMLIBS): Print warning message if no term
	library is found.
	(CXXLIB_LIST, CXXLIB_PATH, FLIB_LIST, FLIB_PATH): Delete.
	* Makeconf.in (CXXLIB_LIST, CXXLIB_PATH, FLIB_LIST, FLIB_PATH):
	Delete.
	(do-subst-default-vals): Delete CXXLIB_LIST, CXXLIB_PATH,
	FLIB_LIST, and FLIB_PATH from the list.

Thu Nov  7 12:43:36 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* octMakefile.in (bin-dist-tar): Delete references to octtopnm.

	* configure.in (RLD_FLAG): Define if x86-linux.

	* Version 1.91.

Wed Nov  6 16:26:39 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: Add checks for group stuff.

Tue Nov  5 12:32:30 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: Add checks for geteuid, getuid.

	* configure.in: Comment out code to handle --enable-readline since
	it doesn't work yet.

	* aclocal.m4 (OCTAVE_SIGNAL_CHECK, OCTAVE_REINSTALL_SIGHANDLERS):
	New checks stolen from bash 2.0 config.
	* configure.in: Use them.

	* acconfig.h: Add #undefs for HAVE_BSD_SIGNALS, HAVE_POSIX_SIGNALS,
	HAVE_USG_SIGHOLD, and MUST_REINSTALL_SIGHANDLERS.

Mon Nov  4 11:31:22 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>
